Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

$Id:$
11/17/2009
  LUCENE-2079: Allow specifying delta thread priority after the "&";
  added log.time.step.msec to print per-time-period counts; fixed
  NearRealTimeTask to print reopen times (in msec) of each reopen, at
  the end.  (Mike McCandless)

11/13/2009
  LUCENE-2050: Added ability to run tasks within a serial sequence in
  the background, by appending "&".  The tasks are stopped & joined at
  the end of the sequence.  Also added Wait and RollbackIndex tasks.
  Genericized NearRealTimeReaderTask to only reopen the reader
  (previously it spawned its own thread, and also did searching).
  Also changed the API of PerfRunData.getIndexReader: it now returns a
  reference, and it's your job to decRef the reader when you're done
  using it.  (Mike McCandless)

11/12/2009
  LUCENE-2059: allow TrecContentSource not to change the docname.
  Previously, it would always append the iteration # to the docname.
  With the new option content.source.excludeIteration, you can disable this.
  The resulting index can then be used with the quality package to measure
  relevance. (Robert Muir)
  
11/12/2009
  LUCENE-2058: specify trec_eval submission output from the command line.
  Previously, 4 arguments were required, but the third was unused. The 
  third argument is now the desired location of submission.txt  (Robert Muir)

11/08/2009
  LUCENE-2044: Added delete.percent.rand.seed to seed the Random instance
  used by DeleteByPercentTask.  (Mike McCandless)

11/07/2009
  LUCENE-2043: Fix CommitIndexTask to also commit pending IndexReader
  changes (Mike McCandless)

11/07/2009
  LUCENE-2042: Added print.hits.field, to print each hit from the
  Search* tasks.  (Mike McCandless)

11/04/2009
  LUCENE-2029: Added doc.body.stored and doc.body.tokenized; each
  falls back to the non-body variant as its default.  (Mike McCandless)

10/28/2009