@@ -985,6 +985,11 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 else|else
 block|{
